# datalevin

./: .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn  project.clj  release.clj
.clj-kondo/: config.edn
.github/workflows/: release.javascript.yml  release.python.yml
benchmarks/: README.md
benchmarks/datascript-bench/: bench.clj
bindings/javascript/: README.md  package-lock.json  package.json
bindings/javascript/src/: jvm.js
bindings/javascript/test/: jvm.test.mjs
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/src/datalevin/: __init__.py  _jvm.py
bindings/python/tests/: test_packaging.py  test_surface_unit.py
doc/: dtlv.md  ha.md  install.md  query.md  search.md  server.md  transact.md  vector.md
examples/java/: README.md
script/: deploy-javascript  deploy-packages  deploy-packages.md  deploy-python  deploy-python.md  ldbc-snb-test  test-javascript-package  test-python-package
script/jepsen/: asymmetric-workloads  combo-workloads  degraded-workloads  quorum-workloads
src/datalevin/: bits.clj  built_ins.clj  client.clj  conn.clj  constants.clj  core.clj  db.clj  dump.clj  embedding.clj  ha.clj  interface.clj  interpret.clj  kv.clj  llm.clj  lmdb.clj  main.clj  prepare.clj  protocol.clj  query.clj  query_optimizer.clj  remote.clj  replica.clj  secondary_index.clj  server.clj  spill.clj  storage.clj  txlog.clj  udf.clj  validate.clj
src/datalevin/binding/: cpp.clj
src/datalevin/ha/: authority.clj  control.clj  promotion.clj  (+1 more)
test-jar/: build.clj  deps.edn  test-uber.sh  test.sh
test/datalevin/: test0.clj
(+61 files in other folders)
