[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalevin"
version = "0.10.17"
description = "Python bindings for Datalevin over the JVM interop bridge"
readme = "README.md"
requires-python = ">=3.10"
license = "EPL-2.0"
authors = [
  { name = "Huahai Yang", email = "huahai.yang@gmail.com" },
]
dependencies = [
  "JPype1>=1.7.1,<2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datalevin = ["py.typed", "jars/*.jar"]
